--- a/index.html
+++ b/index.html
@@ -869,7 +869,6 @@
     </footer>
 
 
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
         integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -880,8 +879,52 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
         </script>
-    <script src="/main.js"></script>
+    <!-- <script src="/main.js"></script> -->
 
+    <script>
+        let navbar = $(".navbar")  //this will store navbar div in navbar variable
+        $(window).scroll(function () {
+            // console.log(window.innerHieght);
+            // console.log($(".section-2").offset().top);
+            let oTop = $(".section-2").offset().top - window.innerHeight;
+            if ($(window).scrollTop() > oTop) {
+                navbar.addClass("sticky");
+            }
+            else {
+                navbar.removeClass("sticky")
+            }
+        });
+
+
+        // counter animation
+
+        let ncount = function (selector) {
+            $(selector).each(function () {
+                $(this).animate(
+                    {
+                        Counter: $(this).text()
+                    },
+                    {
+                        duration: 4000,
+                        easing: "swing",
+                        step: function (value) {
+                            $(this).text(Math.ceil(value));
+                        }
+                    }
+                );
+            });
+        };
+
+        let a = 0;
+        $(window).scroll(function () {
+
+            let oTop = $(".numbers").offset().top - window.innerHeight;
+            if (a == 0 && $(window).scrollTop() >= oTop) {
+                a++;
+                ncount(".rect>h1");
+            }
+        })
+    </script>
 
 </body>
 
